# Rust-Rastor-to-SVG

./: Cargo.toml  README.md
src/: edge_detection.rs  image_to_svg_converter.rs  main.rs  svg.rs
